2006-12-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-sankei.el (shimbun-clear-contents): Break long lines.

2006-12-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-sankei.el: Rewrite.

	* shimbun/nnshimbun.el (nnshimbun-close-server): Save NOV for only
	existing groups.
	(nnshimbun-nov-buffer-name, nnshimbun-nov-directory)
	(nnshimbun-nov-file-name): Move forward.

2006-11-25  Hideyuki SHIRAI  <shirai@meadowy.org>

	* mew-w3m.el (w3m-mail-compose-with-mew): Refrain handling of
	`current-prefix-arg'.

2006-11-14  Ren Lifeng  <lfren@cad.zju.edu.cn>

	* w3m-cookie.el (w3m-cookie-1-acceptable-p): Accept cookie whose
	domain attribute is ".foo.barz.bar" from host "foo.barz.bar".
	(w3m-cookie-retrieve): Send cookie whose domain attribute is
	".foo.barz.bar" when requesting host "foo.barz.bar".

2006-11-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-mail.el (w3m-mail-compose-with-vm): Require vm-startup.

2006-11-20  Hiroya Murata  <lapis-lazuli@pop06.odn.ne.jp>

	* w3m-mail.el (w3m-mail-compose-with-semi): Require mime-edit.

2006-11-11  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* shimbun/shimbun.el (shimbun-servers-list): Exclude hash,
	rss-hash, atom, atom-hash and multi.

2006-11-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Update index
	url and regexp for kansai.fuukei group.

2006-10-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-prepare-article): Break long
	lines only when text/html is preferred.

2006-10-23  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* shimbun/sb-rss-hash.el (shimbun-hash-update-items): Fix
	multibyte problem.

	* shimbun/sb-rss.el (shimbun-headers): Ditto.

2006-10-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-kantei.el (shimbun-kantei-x-face-alist): Renew.

2006-10-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-prepare-article): Break long
	lines.

	* shimbun/sb-kantei.el (shimbun-kantei-from-address): Remove.